# simbirsoft-assignment

./: .gitignore  README.md  config.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  transactions.csv
locators/: account_page_locators.py  auth_page_locators.py  transaction_page_locators.py
pages/: account_page.py  auth_page.py  base_page.py  transaction_page.py
tests/: test_bank.py
utils/: fib.py
